--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -58,11 +58,9 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
       
-      - name: Déployer le stack via Portainer
-        uses: cssnr/portainer-stack-deploy-action@v1
-        with:
-          url: ${{ secrets.PORTAINER_URL }}
-          token: ${{ secrets.PORTAINER_TOKEN }}
-          name: md2html
-          # file: on pourrait spécifier un compose file si besoin, sinon il réutilise celui du stack existant
-          prune: true
+      - name: Déployer l'image via SSH
+        run: |
+          ${{ secrets.PORTAINER_URL}} 
+          ip a
+          
+          
